--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -85,7 +85,7 @@
         <div class="card">
           <img src="img/mechasMario2.jpg" alt="Mechas magicas" onclick="abrirModal(this)">
           <h3>Mechas magicas (30u)</h3>
-          <p>$9.500</p>
+          <p>$9.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -93,7 +93,7 @@
         <div class="card">
           <img src="img/fantasmita.jpg" alt="Fantasmita" onclick="abrirModal(this)">
           <h3>Fantasmita con chicles y sonido(30u)</h3>
-          <p>$8.500👻</p>
+          <p>$8.900👻</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -101,7 +101,7 @@
         <div class="card">
           <img src="img/nutello1.jpg" alt="Nutello" onclick="abrirModal(this)">
           <h3>Nutello (30u)</h3>
-          <p>$8.500</p>
+          <p>$8.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -125,7 +125,7 @@
         <div class="card">
           <img src="img/botellitas.jpg" alt="Botellitas con chicles" onclick="abrirModal(this)">
           <h3>Botellitas con chicles (30u)</h3>
-          <p>$10.000</p>
+          <p>$10.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -134,22 +134,6 @@
           <img src="img/burbujeros.jpg" alt="Burbujeros" onclick="abrirModal(this)">
           <h3>Burbujeros (24u)</h3>
           <p>$15.000</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/carrera.jpg" alt="Autos de carrera con chicles" onclick="abrirModal(this)">
-          <h3>Autos de carrera con chicles(30u)</h3>
-          <p>$8.500</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/cars2.jpg" alt="cars" onclick="abrirModal(this)">
-          <h3>Cars(30u)</h3>
-          <p>$8.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -229,7 +213,7 @@
         <div class="card">
           <img src="img/chupetinBrain.jpg" alt="Chupetín Brain" onclick="abrirModal(this)">
           <h3>Chupetin con polvo acido Brain(30u)</h3>
-          <p>$8.400</p>
+          <p>$8.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -237,7 +221,7 @@
         <div class="card">
           <img src="img/chupetinConAcido.jpg" alt="Chupetín con polvo acido" onclick="abrirModal(this)">
           <h3>Chupetin con polvo acido skull (30u)</h3>
-          <p>$8.400</p>
+          <p>$8.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -325,7 +309,7 @@
         <div class="card">
           <img src="img/chiclepormetro1.jpg" alt="Chicle por metro" onclick="abrirModal(this)">
           <h3>Chicle por metro (30u)</h3>
-          <p>$7.800</p>
+          <p>$8.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -333,7 +317,7 @@
         <div class="card">
           <img src="img/chiclepormetro2.jpg" alt="Chicle por metro" onclick="abrirModal(this)">
           <h3>Chicle por metro (30u)</h3>
-          <p>$7.800</p>
+          <p>$8.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -341,15 +325,7 @@
         <div class="card">
           <img src="img/brochetas3.jpg" alt="Brochetas ojos" onclick="abrirModal(this)">
           <h3>Brochetas de ojos (x30 brochetas)</h3>
-          <p>$7.000</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/lolly.jpg" alt="Foot Lollipop" onclick="abrirModal(this)">
-          <h3>Chupetin con polvo acido (x30u)</h3>
-          <p>$9.000</p>
+          <p>$7.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -357,7 +333,7 @@
         <div class="card">
           <img src="img/chupetinesconformas.jpg" alt="Chupetines con formas" onclick="abrirModal(this)">
           <h3>Chupetines con formas (x30)</h3>
-          <p>$8.000</p>
+          <p>$8.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -373,7 +349,7 @@
         <div class="card">
           <img src="img/pimballkit.jpg" alt="chicles" onclick="abrirModal(this)">
           <h3>Pimball + chicles(x30)</h3>
-          <p>$8.500</p>
+          <p>$8.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -381,7 +357,7 @@
         <div class="card">
           <img src="img/pimballremera.jpg" alt="chicles" onclick="abrirModal(this)">
           <h3>Remera pimball + chicles(x30)</h3>
-          <p>$8.500</p>
+          <p>$8.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -389,15 +365,7 @@
         <div class="card">
           <img src="img/pimballip.jpg" alt="chicles" onclick="abrirModal(this)">
           <h3>Celu + chicles(x30)</h3>
-          <p>$8.500</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/popping.jpg" alt="Polvo acido Popping candy" onclick="abrirModal(this)">
-          <h3>Polvo acido (x30u)</h3>
-          <p>$8.400</p>
+          <p>$8.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -427,65 +395,17 @@
         </div>
 
         <div class="card">
-          <img src="img/gomitapancho.jpg" alt="Gomitas" onclick="abrirModal(this)">
-          <h3>Gomitas con forma de pancho (x30u)</h3>
-          <p>$8.500</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/gomitahelado.jpg" alt="Gomitas" onclick="abrirModal(this)">
-          <h3>Gomitas con forma de helado (x30u)</h3>
-          <p>$8.500</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/gomitapizza.jpg" alt="Gomitas" onclick="abrirModal(this)">
-          <h3>Gomitas con forma de pizza (x30u)</h3>
-          <p>$8.500</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/poke.jpg" alt="Bolas Pokemon con sorpresa y caramelo" onclick="abrirModal(this)">
-          <h3>Bolas Pokemon con sorpresa y chicle (x30u)</h3>
-          <p>$10.500</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
           <img src="img/sorpresaplant.jpg" alt="Bolas" onclick="abrirModal(this)">
           <h3>Sorpresa plantas vs Zombies y chicles (x30u)</h3>
-          <p>$10.500</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/sorpresacapi.jpg" alt="Bolas" onclick="abrirModal(this)">
-          <h3>Sorpresa capibara y chicles (x30u)</h3>
-          <p>$10.500</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/sorpresa22.jpg" alt="Bolas" onclick="abrirModal(this)">
-          <h3>Sorpresa chicles (x30u)</h3>
-          <p>$10.500</p>
+          <p>$10.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
 
         <div class="card">
           <img src="img/sorpresa2.jpg" alt="Bolas" onclick="abrirModal(this)">
-          <h3>Sorpresa chicles (x30u)</h3>
-          <p>$10.500</p>
+          <h3>Sorpresa de dinosaurios + chicles (x30u)</h3>
+          <p>$10.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -646,30 +566,6 @@
           <img src="img/huesos.jpg" alt="Anillos" onclick="abrirModal(this)">
           <h3>Gomitas Piñata huesos (700g)</h3>
           <p>$6.500</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/smack_bar.jpg" alt="Smack bar." onclick="abrirModal(this)">
-          <h3>Smack bar (12 unidades)</h3>
-          <p>Sin stock</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/dispenser.jpg" alt="Dispenser con chicles" onclick="abrirModal(this)">
-          <h3>Dispenser con chicles</h3>
-          <p>$5.000</p>
-        <button class="btn-carrito">Agregar al pedido</button>
-        <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/trak.jpg" alt="Dispenser con chicles" onclick="abrirModal(this)">
-          <h3>Dispenser con chicles</h3>
-          <p>$5.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
