--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -21,7 +21,7 @@
     Envíos a todo el país<span class="emoji">📦</span> Golosinas Aries<span class="emoji">♈🔥</span>
     </h1>
     <nav>
-      <a href="index.html">Inicio</a>
+      <a href="index.html">HALLOWEEN🎃</a>
       <a href="catalogo.html">Catálogo</a>
       <a href="contacto.html">Contacto</a>
       <input type="text" id="search" placeholder="🔍 Buscá un producto..." style="margin-left:0.1rem; padding:0.3rem; border-radius:5px; border:none;">
@@ -139,22 +139,6 @@
         </div>
 
         <div class="card">
-          <img src="img/fantasmitas.jpg" alt="Fantasmitas" onclick="abrirModal(this)">
-          <h3>Gomitas blandas Fantasmita (30u)</h3>
-          <p>$7.000👻</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/donas.jpg" alt="Donas" onclick="abrirModal(this)">
-          <h3>Gomitas blandas Donas (30u)</h3>
-          <p>$7.000</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
           <img src="img/gomitasblandas3.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
           <h3>Gomitas blandas de boca(30u)</h3>
           <p>$7.000</p>
@@ -165,14 +149,6 @@
         <div class="card">
           <img src="img/gomitasblandas4.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
           <h3>Gomitas blandas de river(30u)</h3>
-          <p>$7.000</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/gomitasblandas5.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
-          <h3>Gomitas blandas Among Us(30u)</h3>
           <p>$7.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
@@ -190,22 +166,6 @@
           <img src="img/gomitasblandas2.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
           <h3>Gomitas blandas hombre araña(30u)</h3>
           <p>$7.000</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/gomitasblandas7.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
-          <h3>Gomitas blandas.(30u)</h3>
-          <p>$7.000</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/frutilla.jpg" alt="Frutillas" onclick="abrirModal(this)">
-          <h3>Gomitas blandas Frutillas (30u)</h3>
-          <p>$7.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -229,23 +189,7 @@
         <div class="card">
           <img src="img/cajaCalabaza.jpg" alt="Chupetin calabaza" onclick="abrirModal(this)">
           <h3>Chupetin Calabaza con polvo acido (30u)</h3>
-          <p>$8.400</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/calabaza.jpg" alt="calabaza" onclick="abrirModal(this)">
-          <h3>Gomitas blandas Calabazas (30u)</h3>
-          <p>$7.000</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/capibara.jpg" alt="Capibaras" onclick="abrirModal(this)">
-          <h3>Gomitas blandas Capibaras (30u)</h3>
-          <p>$7.000</p>
+          <p>$8.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -268,7 +212,7 @@
 
         <div class="card">
           <img src="img/alcancias2.jpg" alt="Alcancias con gelatinas" onclick="abrirModal(this)">
-          <h3>Alcancias con gelatinas Pinguino amarillo</h3>
+          <h3>Alcancias con gelatinas Gallito</h3>
           <p>$4.500 (CADA UNA)</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
@@ -374,30 +318,6 @@
           <img src="img/coolmint.jpg" alt="Cool Mint" onclick="abrirModal(this)">
           <h3>Cool Mint sabores frutales (x30u)</h3>
           <p>$8.800</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/merliina.jpg" alt="Eyeball caramelo duro Merlina" onclick="abrirModal(this)">
-          <h3>Chupetines Merlina (x30u)</h3>
-          <p>$9.000</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/monedas.jpg" alt="Monedas de chocolate" onclick="abrirModal(this)">
-          <h3>Monedas de chocolate (x250u)</h3>
-          <p>$13.000</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/sorpresaplant.jpg" alt="Bolas" onclick="abrirModal(this)">
-          <h3>Sorpresa plantas vs Zombies y chicles (x30u)</h3>
-          <p>$10.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -577,6 +497,128 @@
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
+
+      <!-- falta en minorista -->
+        <div class="card">
+          <img src="img/sorpresacapibara1.jpg" alt="Bolas" onclick="abrirModal(this)">
+          <h3>Sorpresa capibara + chicles (x30u)</h3>
+          <p>$10.900</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/calabaza.jpg" alt="calabaza" onclick="abrirModal(this)">
+          <h3>Gomitas blandas Calabazas (30u)</h3>
+          <p>$7.000</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/capibara.jpg" alt="Capibaras" onclick="abrirModal(this)">
+          <h3>Gomitas blandas Capibaras (30u)</h3>
+          <p>$7.000</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+      <div class="card">
+          <img src="img/gomitasblandas7.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
+          <h3>Gomitas blandas .(30u)</h3>
+          <p>$7.000</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+      </div>
+
+       <div class="card">
+          <img src="img/sorpresacandyloka.jpg" alt="Bolas" onclick="abrirModal(this)">
+          <h3>Sorpresa candy loka (x30u)</h3>
+          <p>$10.900</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+         <div class="card">
+          <img src="img/sorpresalyl.jpg" alt="Bolas" onclick="abrirModal(this)">
+          <h3>Sorpresa Lyl (x30u)</h3>
+          <p>$10.900</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+       <div class="card">
+          <img src="img/sorpresaplant2.jpg" alt="Bolas" onclick="abrirModal(this)">
+          <h3>Sorpresa plantas vs Zombies y chicles (x30u)</h3>
+          <p>$10.900</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+      <div class="card">
+          <img src="img/frutilla1.jpg" alt="Frutillas" onclick="abrirModal(this)">
+          <h3>Gomitas blandas Frutillas (30u)</h3>
+          <p>$7.500</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+      </div>
+
+      <div class="card">
+          <img src="img/gomitasoh.jpg" alt="Gomitas con forma de cara" onclick="abrirModal(this)">
+          <h3>Gomitas pack (30u)</h3>
+          <p>$8.800</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/merlina1.jpg" alt="Eyeball caramelo duro Merlina" onclick="abrirModal(this)">
+          <h3>Chupetines Merlina (x30u)</h3>
+          <p>$9.000</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+           <div class="card">
+          <img src="img/fantasmitas.jpg" alt="Fantasmitas" onclick="abrirModal(this)">
+          <h3>Gomitas blandas Fantasmita (30u)</h3>
+          <p>$7.000👻</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/donas.jpg" alt="Donas" onclick="abrirModal(this)">
+          <h3>Gomitas blandas Donas (30u)</h3>
+          <p>$7.000</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+         <div class="card">
+          <img src="img/monedas1.jpg" alt="Monedas de chocolate" onclick="abrirModal(this)">
+          <h3>Monedas de chocolate (x250u)</h3>
+          <p>$13.000</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+         <div class="card">
+          <img src="img/trompetamaschicle.jpg" alt="chicles" onclick="abrirModal(this)">
+          <h3>Trompeta + chicles (x30)</h3>
+          <p>$8.900</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+          <div class="card">
+          <img src="img/gomitasblandas5.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
+          <h3>Gomitas blandas Among Us(30u)</h3>
+          <p>$7.000</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
 
 </div>
 
