--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     Envíos a todo el país 🇦🇷  - Golosinas Aries <span class="emoji">♈🔥</span>
     </h1>
     <nav>
-      <a href="index.html">Inicio</a>
+      <a href="index.html">HALOWEEN 🎃</a>
       <a href="catalogo.html">Catálogo</a>
       <a href="contacto.html">Contacto</a>
       <input type="text" id="search" placeholder="🔍 Buscar producto..." style="margin-left:0.1rem; padding:0.3rem; border-radius:5px; border:none;">
@@ -53,49 +53,74 @@
   <main>
    <!-- Productos Destacados -->
     <section class="destacados">
-      <h2>Productos en Promoción</h2>
+      <h2>HALLOWEEN 👻 🎃</h2>
       
       <div class="portfolio">
 
        <div class="card">
-          <img src="img/bombones_surtidos.jpg" alt="Bombones Surtidos" onclick="abrirModal(this)">
-          <h3>Bocaditos Bel (50 unidades)</h3>
-          <p>$7.200</p>
+          <img src="img/halloween2.jpg" alt="🎃 Halloween" onclick="abrirModal(this)">
+          <h3>🎃 Halloween chupetines (30u)</h3>
+          <p>$7.800</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
 
-      <div class="card">
-        <img src="img/burbujeros.jpg" alt="Burbujero" onclick="abrirModal(this)">
-        <h3>Burbujero(x24u)</h3>
-        <p>$15.000</p>
-        <button class="btn-carrito">Agregar al pedido</button>
-        <button class="btn-carrito">Hacer una consulta</button>
-      </div>
-
-      <div class="card">
-        <img src="img/alcancias1.jpg" alt="Alcancias con gelatinas" onclick="abrirModal(this)">
-        <h3>Alcancias con gelatinas</h3>
-        <p>$4.500 (CADA UNA)</p>
-        <button class="btn-carrito">Agregar al pedido</button>
-        <button class="btn-carrito">Hacer una consulta</button>
-      </div>
-      
-      <div class="card">
-          <img src="img/lataschicas.jpg" alt="Latitas con chicles" onclick="abrirModal(this)">
-          <h3>Latitas con chicles (x30)</h3>
-          <p>$11.500</p>
+        <div class="card">
+          <img src="img/cajaCalabaza.jpg" alt="Chupetin calabaza" onclick="abrirModal(this)">
+          <h3>Chupetin Calabaza con polvo acido (30u)</h3>
+          <p>$8.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
-      </div>
+        </div>
 
-      <div class="card">
-          <img src="img/yummyfrutillaconcrema.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
-          <h3>Gomitas Yummy frutilla con crema (500g)</h3>
-          <p>$6.500</p>
+        <div class="card">
+          <img src="img/calabaza.jpg" alt="calabaza" onclick="abrirModal(this)">
+          <h3>Gomitas blandas Calabazas (30u)</h3>
+          <p>$7.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
-      </div>
+        </div>
+
+        <div class="card">
+          <img src="img/chupetinBrain.jpg" alt="Chupetín Brain" onclick="abrirModal(this)">
+          <h3>Chupetin con polvo acido Brain(30u)</h3>
+          <p>$8.900</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/chupetinConAcido.jpg" alt="Chupetín con polvo acido" onclick="abrirModal(this)">
+          <h3>Chupetin con polvo acido skull (30u)</h3>
+          <p>$8.900</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+
+        <div class="card">
+          <img src="img/gomitablandaCara3.jpg" alt="Gomitas con forma de cara" onclick="abrirModal(this)">
+          <h3>Gomitas (30u)</h3>
+          <p>$8.800</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/fantasmita.jpg" alt="Fantasmita" onclick="abrirModal(this)">
+          <h3>Fantasmita con chicles y sonido(30u)</h3>
+          <p>$8.900👻</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/fantasmitas.jpg" alt="Fantasmitas" onclick="abrirModal(this)">
+          <h3>Gomitas blandas Fantasmita (30u)</h3>
+          <p>$7.000👻</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
 
       </div>
     </section>
