--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <main>
    <!-- Productos Destacados -->
     <section class="destacados">
-      <h2>HALLOWEEN 👻 🎃</h2>
+      <h2>HALLOWEEN 🎃</h2>
       
       <div class="portfolio">
 
