--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -21,7 +21,7 @@
     Envíos a todo el país<span class="emoji">📦</span> Golosinas Aries<span class="emoji">♈🔥</span>
     </h1>
     <nav>
-      <a href="index.html">HALLOWEEN🎃</a>
+      <a href="index.html">HALLOWEEN</a>
       <a href="catalogo.html">Catálogo</a>
       <a href="contacto.html">Contacto</a>
       <input type="text" id="search" placeholder="🔍 Buscá un producto..." style="margin-left:0.1rem; padding:0.3rem; border-radius:5px; border:none;">
