--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     Envíos a todo el país 🇦🇷  - Golosinas Aries <span class="emoji">♈🔥</span>
     </h1>
     <nav>
-      <a href="index.html">HALOWEEN 🎃</a>
+      <a href="index.html">HALOWEEN</a>
       <a href="catalogo.html">Catálogo</a>
       <a href="contacto.html">Contacto</a>
       <input type="text" id="search" placeholder="🔍 Buscar producto..." style="margin-left:0.1rem; padding:0.3rem; border-radius:5px; border:none;">
@@ -82,6 +82,14 @@
         </div>
 
         <div class="card">
+          <img src="img/merlina1.jpg" alt="Eyeball caramelo duro Merlina" onclick="abrirModal(this)">
+          <h3>Chupetines Merlina (x30u)</h3>
+          <p>$9.000</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+        
+        <div class="card">
           <img src="img/chupetinBrain.jpg" alt="Chupetín Brain" onclick="abrirModal(this)">
           <h3>Chupetin con polvo acido Brain(30u)</h3>
           <p>$8.900</p>
@@ -121,6 +129,39 @@
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
+
+        <div class="card">
+          <img src="img/ojos.jpg" alt="Ojos" onclick="abrirModal(this)">
+          <h3>Gomitas blandas Ojos (30u)</h3>
+          <p>$7.000</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/brochetas3.jpg" alt="Brochetas ojos" onclick="abrirModal(this)">
+          <h3>Brochetas de ojos (x30 brochetas)</h3>
+          <p>$7.500</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+         <div class="card">
+          <img src="img/sorpresaplant2.jpg" alt="Bolas" onclick="abrirModal(this)">
+          <h3>Sorpresa plantas vs Zombies y chicles (x30u)</h3>
+          <p>$10.900</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+         <div class="card">
+          <img src="img/gomitasoh.jpg" alt="Gomitas con forma de cara" onclick="abrirModal(this)">
+          <h3>Gomitas pack (30u)</h3>
+          <p>$8.800</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
 
       </div>
     </section>
