--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,7 @@
     </h1>
 
     <nav>
-      <a href="index.html">HALLOWEEN</a>
+      <a href="index.html">🎃👻</a>
       <a href="catalogo.html">Catálogo</a>
       <a href="contacto.html">Contacto</a>
     </nav>
