--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     Envíos a todo el país 🇦🇷  - Golosinas Aries <span class="emoji">♈🔥</span>
     </h1>
     <nav>
-      <a href="index.html">HALOWEEN</a>
+      <a href="index.html">🎃👻</a>
       <a href="catalogo.html">Catálogo</a>
       <a href="contacto.html">Contacto</a>
       <input type="text" id="search" placeholder="🔍 Buscar producto..." style="margin-left:0.1rem; padding:0.3rem; border-radius:5px; border:none;">
@@ -88,7 +88,7 @@
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
-        
+
         <div class="card">
           <img src="img/chupetinBrain.jpg" alt="Chupetín Brain" onclick="abrirModal(this)">
           <h3>Chupetin con polvo acido Brain(30u)</h3>
