--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
        <div class="card">
           <img src="img/halloween2.jpg" alt="🎃 Halloween" onclick="abrirModal(this)">
           <h3>🎃 Halloween chupetines (30u)</h3>
-          <p>$7.800</p>
+          <p>$8.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -109,7 +109,7 @@
         <div class="card">
           <img src="img/gomitablandaCara3.jpg" alt="Gomitas con forma de cara" onclick="abrirModal(this)">
           <h3>Gomitas (30u)</h3>
-          <p>$8.800</p>
+          <p>$9.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -156,8 +156,8 @@
 
          <div class="card">
           <img src="img/gomitasoh.jpg" alt="Gomitas con forma de cara" onclick="abrirModal(this)">
-          <h3>Gomitas pack (30u)</h3>
-          <p>$8.800</p>
+          <h3>Gomitas 👁️👄👁️ (30u)</h3>
+          <p>$9.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
