--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -49,7 +49,7 @@
  <!-- Hero -->
   <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
     <div class="hero-overlay"></div>
-    <h2>Compra mínima: 6 productos</h2>
+    <h2>Compra mínima: 6 productos, si llevás 10 productos: envío GRATIS</h2>
   </aside>
 
   <main>
@@ -306,25 +306,11 @@
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
 
-        <div class="card">
-          <img src="img/chupetinesconled1.jpg" alt="Coronas LED" onclick="abrirModal(this)">
-          <h3>Chupetines de Corona con LED (x30u)</h3>
-          <p>$9.000</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
+  
 
         <div class="card">
           <img src="img/pimballkit.jpg" alt="chicles" onclick="abrirModal(this)">
           <h3>Pimball + chicles(x30)</h3>
-          <p>$8.900</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/pimballremera.jpg" alt="chicles" onclick="abrirModal(this)">
-          <h3>Remera pimball + chicles(x30)</h3>
           <p>$8.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
