--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -49,7 +49,7 @@
  <!-- Hero -->
   <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
     <div class="hero-overlay"></div>
-    <h2>Compra mínima: 6 productos, si llevás 10 productos: envío GRATIS</h2>
+    <h2>"Agregar al pedido" Anota por vos lo que queres pedir por WhatsApp 😉</h2>
   </aside>
 
   <main>
@@ -181,14 +181,6 @@
         <div class="card">
           <img src="img/gomitasblandas1.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
           <h3>Gomitas blandas(30u)</h3>
-          <p>$7.000</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/gomitasblandas2.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
-          <h3>Gomitas blandas hombre araña(30u)</h3>
           <p>$7.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
@@ -336,14 +328,6 @@
           <img src="img/sorpresa2.jpg" alt="Bolas" onclick="abrirModal(this)">
           <h3>Sorpresa de dinosaurios + chicles (x30u)</h3>
           <p>$10.900</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
-          <img src="img/trompeta1.jpg" alt="Trompetas con chupetin y sonido" onclick="abrirModal(this)">
-          <h3>Trompetas con chupetin y sonido (30u)</h3>
-          <p>$8.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
