--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -49,7 +49,7 @@
  <!-- Hero -->
   <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
     <div class="hero-overlay"></div>
-    <h2>"Agregar al pedido" Anota por vos lo que queres pedir por WhatsApp 😉</h2>
+    <h2>🛒 El botón "Agregar al pedido" Anota por vos lo que querés pedir por WhatsApp 😉</h2>
   </aside>
 
   <main>
