--- a/contacto.html
+++ b/contacto.html
@@ -81,7 +81,7 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png"
          alt="WhatsApp"
          style="width:25px; height:25px; margin-right:10px;">
-    <span>Hacer mi pedido/consulta</span>
+    <span>Hacer una consulta</span>
   </div>
 </a>
 
